Changed some of the styling and fixed alignment issues

--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
+.raleway-ralewayFont {
+  font-family: "Raleway", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
 * {
-  background-color: darkcyan;
   color: white;
   margin: 0 auto;
 }
@@ -9,11 +15,14 @@
   }
 }
 
+body {
+  font-family: raleway;
+  background-color: black;
+}
+
 button {
-  background-color: yellow;
-  border: 2px solid yellowgreen;
-  color: blueviolet;
-  border-radius: 15%;
+  background-color: red;
+  color: white;
   text-align: center;
   font-weight: 700;
   margin: 4px 2px;
@@ -22,6 +31,7 @@ button {
 }
 
 h1 {
+  color: #ffc000;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -46,11 +56,11 @@ h1 {
 }
 
 .qImgBox {
-  display: inline-block;
   text-align: center;
   align-items: center;
   justify-content: center;
   padding: 0px, 100px;
+  display: flex;
 }
 
 img {
@@ -81,7 +91,9 @@ img {
   flex-direction: column;
   margin-right: 0;
   font-size: larger;
-  border: 1px solid red;
+  border: 1px solid grey;
+  background-color: white;
+  color: black;
   padding-left: 0px;
 }
 .questionText p {
